# VibeREC

./: .gitignore
IronCut/: CMakeLists.txt  README.md
IronCut/include/: clip.h  engine.h  timeline.h
IronCut/include/gui/: application.h  widgets.h
IronCut/src/: clip.cpp  engine.cpp  main.cpp  timeline.cpp
IronCut/src/gui/: application.cpp  widgets.cpp
